--- a/Italbytz.Infrastructure.OpenTriviaDatabase/Italbytz.Infrastructure.OpenTriviaDatabase.Tests/Italbytz.Infrastructure.OpenTriviaDatabase.Tests.csproj
+++ b/Italbytz.Infrastructure.OpenTriviaDatabase/Italbytz.Infrastructure.OpenTriviaDatabase.Tests/Italbytz.Infrastructure.OpenTriviaDatabase.Tests.csproj
@@ -13,6 +13,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OpenTriviaDatabase\OpenTriviaDatabase.csproj" />
+    <ProjectReference Include="..\Italbytz.Infrastructure.OpenTriviaDatabase\Italbytz.Infrastructure.OpenTriviaDatabase.csproj" />
   </ItemGroup>
 </Project>
